--- a/main.html
+++ b/main.html
@@ -10,7 +10,48 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<form method="post">
+		<div><label for="name">Name:</label>
+		<input type="text" id="name" required>
+			</div>
+		<br>
+		<div><label for="email">Email:</label>
+		<input type="email" id="email" required>
+			</div>
+		<br>
+		<label>Gender:</label>
+		<input type="radio" id="gender_m" name="gender" value="male" required>
+		<label for="male">Male</label>
+		<input type="radio" id="gender_f" name="gender" value="female" required>
+		<label for="male">Female</label>
+		        <div>
+					<br>
+            <label for="cars">Car Brands:</label>
+            <select id="cars" name="cars" required>
+                <option value="" disabled selected>--Please choose an option--</option>
+                <option value="bmw">BMW</option>
+                <option value="audi">Audi</option>
+                <option value="mercedez">Mercedez</option>
+            </select>
+        </div>
+		<br>
+        <div>
+            <label for="carage"> Car Age:</label>
+            <input type="number" id="carage" name=" carage" required>
+        </div>
+		<br>
+        <div>
+            <label for="dop">Date of Purchase(dop):</label>
+            <input type="date" id="dop" name="dop" required>
+        </div><br>
+        <div>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" placeholder="Password" required>
+        </div><br>
+        <div>
+            <button type="submit">Submit</button>
+        </div>
+	</form>
 </body>
 
 </html>
